@@ -3,23 +3,19 @@ package ru.oparin.solution.controller;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 import ru.oparin.solution.config.SubscriptionProperties;
-import ru.oparin.solution.dto.InitiatePaymentRequest;
-import ru.oparin.solution.dto.InitiatePaymentResponse;
-import ru.oparin.solution.dto.PlanDto;
-import ru.oparin.solution.dto.SubscriptionStatusResponse;
-import ru.oparin.solution.exception.UserException;
+import ru.oparin.solution.dto.*;
+import ru.oparin.solution.model.PlanProductCode;
 import ru.oparin.solution.model.User;
 import ru.oparin.solution.repository.PlanRepository;
+import ru.oparin.solution.service.PlanMapper;
 import ru.oparin.solution.service.SubscriptionPaymentService;
 import ru.oparin.solution.service.UserService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * API подписок и оплаты через Робокассу.
@@ -37,23 +33,30 @@ public class SubscriptionController {
 
     /**
      * Список активных тарифных планов.
+     *
+     * @param product код продукта (например CAMPAIGN_MANAGE); без параметра — legacy-поведение при глобальной оплате
      */
     @GetMapping("/plans")
-    public ResponseEntity<List<PlanDto>> getPlans() {
+    public ResponseEntity<List<PlanDto>> getPlans(
+            @RequestParam(required = false) String product
+    ) {
+        if (PlanProductCode.CAMPAIGN_MANAGE.equals(product)) {
+            if (!subscriptionProperties.isCampaignManagementEnabled()) {
+                return ResponseEntity.ok(List.of());
+            }
+            List<PlanDto> list = planRepository.findByIsActiveTrueAndProductCodeOrderBySortOrderAsc(product)
+                    .stream()
+                    .map(PlanMapper::toDto)
+                    .toList();
+            return ResponseEntity.ok(list);
+        }
         if (!subscriptionProperties.isBillingEnabled()) {
             return ResponseEntity.ok(List.of());
         }
         List<PlanDto> list = planRepository.findByIsActiveTrueOrderBySortOrderAsc()
                 .stream()
-                .map(p -> PlanDto.builder()
-                        .id(p.getId())
-                        .name(p.getName())
-                        .description(p.getDescription())
-                        .priceRub(p.getPriceRub())
-                        .periodDays(p.getPeriodDays())
-                        .maxCabinets(p.getMaxCabinets())
-                        .build())
-                .collect(Collectors.toList());
+                .map(PlanMapper::toDto)
+                .toList();
         return ResponseEntity.ok(list);
     }
 
@@ -65,22 +68,31 @@ public class SubscriptionController {
         return ResponseEntity.ok(
                 SubscriptionStatusResponse.builder()
                         .billingEnabled(subscriptionProperties.isBillingEnabled())
+                        .campaignManagementEnabled(subscriptionProperties.isCampaignManagementEnabled())
                         .build()
         );
     }
 
     /**
+     * Активация бесплатного плана (без Робокассы).
+     */
+    @PostMapping("/activate")
+    public ResponseEntity<ActivatePlanResponse> activatePlan(
+            @Valid @RequestBody ActivatePlanRequest request,
+            Authentication authentication
+    ) {
+        User user = userService.findByEmail(authentication.getName());
+        return ResponseEntity.ok(subscriptionPaymentService.activateFreePlan(user, request.getPlanId()));
+    }
+
+    /**
      * Инициация оплаты выбранного плана. Возвращает URL для редиректа в Робокассу.
-     * При выключенной оплате возвращает 400.
      */
     @PostMapping("/initiate")
     public ResponseEntity<InitiatePaymentResponse> initiatePayment(
             @Valid @RequestBody InitiatePaymentRequest request,
             Authentication authentication
     ) {
-        if (!subscriptionProperties.isBillingEnabled()) {
-            throw new UserException("Оплата временно отключена", HttpStatus.BAD_REQUEST);
-        }
         User user = userService.findByEmail(authentication.getName());
         InitiatePaymentResponse response = subscriptionPaymentService.initiatePayment(user, request.getPlanId());
         return ResponseEntity.ok(response);
